@@ -337,6 +337,7 @@ local function GWUseThisLocalization()
     L["PLAYER_DODGEBAR_SPELL"] = "Dodge Bar Ability"
     L["PLAYER_DODGEBAR_SPELL_DESC"] = "Enter the spell ID which should be tracked by the dodge bar.\nIf no ID is entered, the default abilities based on your specialization and talents are tracked."
     L["COPY_OF"] = "Copy of"
+    L["MICRO_BAR"] = "Micro Bar"
     
 	--Composite
     L["TOPLEFT"] = ("%s %s"):format(L["TOP"], L["LEFT"])
