@@ -424,6 +424,8 @@ local function LoadMicroMenu()
 
     -- create our micro button container frame
     local mbf = CreateFrame("Frame", nil, UIParent, "GwMicroButtonFrameTmpl")
+    GW.RegisterMovableFrame(mbf, GW.L["MICRO_BAR"], "MicromenuPos", "VerticalActionBarDummy", nil, nil, true, {"default"})
+    mbf:SetPoint("TOPLEFT", mbf.gwMover)
 
     -- reskin all default (and custom) micro buttons to our styling
     reskinMicroButtons(mbf.cf)
