@@ -3,9 +3,6 @@
 
     <Frame name="GwMicroButtonFrameTmpl" topLevel="true" frameStrata="HIGH" inherits="SecureHandlerEnterLeaveTemplate" virtual="true">
         <Size x="380" y="61"/>
-        <Anchors>
-            <Anchor point="TOPLEFT" relativePoint="TOPLEFT" x="0" y="1"></Anchor>
-        </Anchors>
         <Frames>
             <Frame parentKey="cf" inherits="SecureFrameTemplate">
                 <Anchors>
